Small changes made!

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Courseraaaa!</title>
 </head>
 <body>
-<h1> Hello Coursera2<h1>
+<h1> Hello Coursera2 Tis but a scratch! <h1>
 </body>
 </html>
